<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegexActivity">

    <include layout="@layout/toolbar" />

    <EditText
        android:id="@+id/etRegex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="需要检验的内容" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spRegex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRegex"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager">

    </android.support.v7.widget.RecyclerView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:text="@string/regex_mobile"
                android:id="@+id/btnMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_email"
                android:id="@+id/btnEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_url"
                android:id="@+id/btnUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_number"
                android:id="@+id/btnNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_pos_int"
                android:id="@+id/btnPosInt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_neg_int"
                android:id="@+id/btnNegInt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_letter"
                android:id="@+id/btnLetter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_upper_case"
                android:id="@+id/btnUpperCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_lower_case"
                android:id="@+id/btnLowerCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_chinese"
                android:id="@+id/btnChinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_qq"
                android:id="@+id/btnQQ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/regex_macao_mobile"
                android:id="@+id/btnMacaoMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>